@@ -103,6 +103,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 	&lt;action signal="type"&gt;activity&lt;/action&gt;...
 	&lt;action type="function"&gt;parameter&lt;/action&gt;...
 	&lt;item&gt;data&lt;/item&gt;...
+	&lt;output file&gt;filename&lt;/output&gt;
 &lt;/table&gt;
 </pre>
 
@@ -142,6 +143,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 <tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Perform function on signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> action type="<i>function</i>" </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>column0data</i> <code>|</code> <i>column1data</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> output file </td><td class="wiki"> Data output target </td><td class="wiki"> Filename </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Signals </h2>
@@ -162,6 +164,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 <tr><td class="wiki"> hide </td><td class="wiki"> Hide widget </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> grabfocus </td><td class="wiki"> Grab input focus </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> refresh </td><td class="wiki"> Reload input data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> save </td><td class="wiki"> Save widget data </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> clear </td><td class="wiki"> Remove all widget data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> removeselected </td><td class="wiki"> Remove selected widget data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
 </table>
